@@ -24,7 +24,6 @@ import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipFile;
 
@@ -32,10 +31,8 @@ import javax.ws.rs.core.GenericType;
 
 import com.google.common.collect.Lists;
 import io.dockstore.client.cli.nested.WorkflowClient;
-import io.dockstore.common.CommonTestUtilities;
+import io.dockstore.common.CLICommonTestUtilities;
 import io.dockstore.common.ConfidentialTest;
-import io.dockstore.common.FlushingSystemErrRule;
-import io.dockstore.common.FlushingSystemOutRule;
 import io.dockstore.common.SourceControl;
 import io.dockstore.common.WorkflowTest;
 import io.dropwizard.testing.ResourceHelpers;
@@ -46,21 +43,19 @@ import io.swagger.client.model.SourceFile;
 import io.swagger.client.model.Workflow;
 import io.swagger.client.model.WorkflowVersion;
 import org.apache.commons.io.FileUtils;
-import org.junit.Assert;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.contrib.java.lang.system.ExpectedSystemExit;
-import org.junit.contrib.java.lang.system.SystemErrRule;
-import org.junit.contrib.java.lang.system.SystemOutRule;
-import org.junit.experimental.categories.Category;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Tag;
+import org.junit.jupiter.api.Test;
+import uk.org.webcompere.systemstubs.jupiter.SystemStub;
+import uk.org.webcompere.systemstubs.stream.SystemErr;
+import uk.org.webcompere.systemstubs.stream.SystemOut;
 
 import static io.swagger.client.model.ToolDescriptor.TypeEnum.CWL;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static uk.org.webcompere.systemstubs.SystemStubs.catchSystemExit;
 
 /**
  * Extra confidential integration tests, focus on testing workflow interactions
@@ -68,28 +63,27 @@ import static org.junit.Assert.assertTrue;
  *
  * @author dyuen
  */
-@Category({ ConfidentialTest.class, WorkflowTest.class })
-public class WorkflowIT extends BaseIT {
+@Tag(ConfidentialTest.NAME)
+@Tag(WorkflowTest.NAME)
+class WorkflowIT extends BaseIT {
 
-    @Rule
-    public final SystemOutRule systemOutRule = new FlushingSystemOutRule().enableLog().muteForSuccessfulTests();
-    @Rule
-    public final SystemErrRule systemErrRule = new FlushingSystemErrRule().enableLog().muteForSuccessfulTests();
-    @Rule
-    public final ExpectedSystemExit systemExit = ExpectedSystemExit.none();
-    @Rule
-    public final ExpectedException thrown = ExpectedException.none();
+    @SystemStub
+    public final SystemOut systemOutRule = new SystemOut();
+
+    @SystemStub
+    public final SystemErr systemErrRule = new SystemErr();
+
     private final String clientConfig = ResourceHelpers.resourceFilePath("clientConfig");
     private final String jsonFilePath = ResourceHelpers.resourceFilePath("wc-job.json");
 
-    @Before
+    @BeforeEach
     @Override
     public void resetDBBetweenTests() throws Exception {
-        CommonTestUtilities.cleanStatePrivate2(SUPPORT, false);
+        CLICommonTestUtilities.cleanStatePrivate2(SUPPORT, false, testingPostgres);
     }
 
     @Test
-    public void testWorkflowLaunchOrNotLaunchBasedOnCredentials() throws IOException {
+    void testWorkflowLaunchOrNotLaunchBasedOnCredentials() throws Exception {
         String toolpath = SourceControl.GITHUB.toString() + "/DockstoreTestUser2/md5sum-checker/test";
 
         testingPostgres.runUpdateStatement("update enduser set isadmin = 't' where username = 'DockstoreTestUser2';");
@@ -97,7 +91,7 @@ public class WorkflowIT extends BaseIT {
         WorkflowsApi workflowApi = new WorkflowsApi(webClient);
         Workflow workflow = workflowApi.manualRegister(SourceControl.GITHUB.getFriendlyName(), "DockstoreTestUser2/md5sum-checker",
             "/checker-workflow-wrapping-workflow.cwl", "test", "cwl", null);
-        assertEquals("There should be one user of the workflow after manually registering it.", 1, workflow.getUsers().size());
+        assertEquals(1, workflow.getUsers().size(), "There should be one user of the workflow after manually registering it.");
         Workflow refresh = workflowApi.refresh(workflow.getId(), true);
 
         assertFalse(refresh.isIsPublished());
@@ -109,17 +103,17 @@ public class WorkflowIT extends BaseIT {
                 "--json", ResourceHelpers.resourceFilePath("md5sum_cwl.json"), "--script" });
 
         // should not be able to launch properly with incorrect credentials
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file.txt"), "workflow", "launch", "--entry", toolpath,
-                "--json", ResourceHelpers.resourceFilePath("md5sum_cwl.json"), "--script" });
+        int exitCode = catchSystemExit(() -> Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file.txt"), "workflow", "launch", "--entry", toolpath,
+                        "--json", ResourceHelpers.resourceFilePath("md5sum_cwl.json"), "--script" }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     /**
      * This tests that you are able to download zip files for versions of a workflow
      */
     @Test
-    public void downloadZipFile() throws IOException {
+    void downloadZipFile() throws IOException {
         String toolpath = SourceControl.GITHUB.toString() + "/DockstoreTestUser2/md5sum-checker/test";
         final ApiClient webClient = getWebClient(USER_2_USERNAME, testingPostgres);
         WorkflowsApi workflowApi = new WorkflowsApi(webClient);
@@ -140,14 +134,14 @@ public class WorkflowIT extends BaseIT {
         File tempZip = File.createTempFile("temp", "zip");
         Path write = Files.write(tempZip.toPath(), arbitraryURL);
         ZipFile zipFile = new ZipFile(write.toFile());
-        assertTrue("zip file seems incorrect",
-            zipFile.stream().map(ZipEntry::getName).collect(Collectors.toList()).contains("md5sum/md5sum-workflow.cwl"));
+        assertTrue(zipFile.stream().map(ZipEntry::getName).toList().contains("md5sum/md5sum-workflow.cwl"),
+                "zip file seems incorrect");
 
         // should not be able to get zip anonymously before publication
         boolean thrownException = false;
         try {
             SwaggerUtility.getArbitraryURL("/workflows/" + workflowId + "/zip/" + versionId, new GenericType<byte[]>() {
-            }, CommonTestUtilities.getWebClient(false, null, testingPostgres));
+            }, CLICommonTestUtilities.getWebClient(false, null, testingPostgres));
         } catch (Exception e) {
             thrownException = true;
         }
@@ -159,12 +153,12 @@ public class WorkflowIT extends BaseIT {
             new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "workflow", "publish", "--entry", toolpath,
                 "--script" });
         arbitraryURL = SwaggerUtility.getArbitraryURL("/workflows/" + workflowId + "/zip/" + versionId, new GenericType<byte[]>() {
-        }, CommonTestUtilities.getWebClient(false, null, testingPostgres));
+        }, CLICommonTestUtilities.getWebClient(false, null, testingPostgres));
         File tempZip2 = File.createTempFile("temp", "zip");
         write = Files.write(tempZip2.toPath(), arbitraryURL);
         zipFile = new ZipFile(write.toFile());
-        assertTrue("zip file seems incorrect",
-            zipFile.stream().map(ZipEntry::getName).collect(Collectors.toList()).contains("md5sum/md5sum-workflow.cwl"));
+        assertTrue(zipFile.stream().map(ZipEntry::getName).toList().contains("md5sum/md5sum-workflow.cwl"),
+                "zip file seems incorrect");
 
         tempZip2.deleteOnExit();
 
@@ -188,7 +182,7 @@ public class WorkflowIT extends BaseIT {
     }
 
     @Test
-    public void testCheckerWorkflowDownloadBasedOnCredentials() throws IOException {
+    void testCheckerWorkflowDownloadBasedOnCredentials() throws Exception {
         String toolpath = SourceControl.GITHUB.toString() + "/DockstoreTestUser2/md5sum-checker/test";
 
         testingPostgres.runUpdateStatement("update enduser set isadmin = 't' where username = 'DockstoreTestUser2';");
@@ -226,14 +220,14 @@ public class WorkflowIT extends BaseIT {
             new String[] { "--config", fileWithCorrectCredentials, "workflow", "publish", "--entry", toolpath, "--unpub", "--script" });
 
         // should not be able to download properly with incorrect credentials because the entry is not published
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(
-            new String[] { "--config", fileWithIncorrectCredentials, "checker", "download", "--entry", toolpath, "--version", "master",
-                "--script" });
+        int exitCode = catchSystemExit(() ->  Client.main(
+                new String[] { "--config", fileWithIncorrectCredentials, "checker", "download", "--entry", toolpath, "--version", "master",
+                        "--script" }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     @Test
-    public void testCheckerWorkflowLaunchBasedOnCredentials() throws IOException {
+    void testCheckerWorkflowLaunchBasedOnCredentials() throws Exception {
         String toolpath = SourceControl.GITHUB.toString() + "/DockstoreTestUser2/md5sum-checker/test";
 
         testingPostgres.runUpdateStatement("update enduser set isadmin = 't' where username = 'DockstoreTestUser2';");
@@ -243,7 +237,7 @@ public class WorkflowIT extends BaseIT {
             .manualRegister(SourceControl.GITHUB.getFriendlyName(), "DockstoreTestUser2/md5sum-checker", "/md5sum/md5sum-workflow.cwl",
                 "test", "cwl", null);
         Workflow refresh = workflowApi.refresh(workflow.getId(), true);
-        Assert.assertFalse(refresh.isIsPublished());
+        assertFalse(refresh.isIsPublished());
 
         workflowApi.registerCheckerWorkflow("/checker-workflow-wrapping-workflow.cwl", workflow.getId(), "cwl", "checker-input-cwl.json");
 
@@ -267,14 +261,14 @@ public class WorkflowIT extends BaseIT {
         Client.main(
             new String[] { "--config", ResourceHelpers.resourceFilePath("config_file2.txt"), "workflow", "publish", "--entry", toolpath,
                 "--unpub", "--script" });
-        systemExit.expectSystemExitWithStatus(Client.ENTRY_NOT_FOUND);
-        Client.main(
-            new String[] { "--config", ResourceHelpers.resourceFilePath("config_file.txt"), "checker", "launch", "--entry", toolpath,
-                "--json", ResourceHelpers.resourceFilePath("md5sum_cwl.json"), "--script" });
+        int exitCode = catchSystemExit(() ->  Client.main(
+                new String[] { "--config", ResourceHelpers.resourceFilePath("config_file.txt"), "checker", "launch", "--entry", toolpath,
+                        "--json", ResourceHelpers.resourceFilePath("md5sum_cwl.json"), "--script" }));
+        assertEquals(Client.ENTRY_NOT_FOUND, exitCode);
     }
 
     @Test
-    public void testHostedWorkflowMetadataAndLaunch() throws IOException {
+    void testHostedWorkflowMetadataAndLaunch() throws IOException {
         final ApiClient webClient = getWebClient(USER_2_USERNAME, testingPostgres);
         HostedApi hostedApi = new HostedApi(webClient);
         Workflow hostedWorkflow = hostedApi.createHostedWorkflow("name", null, CWL.toString(), null, null);
@@ -338,34 +332,35 @@ public class WorkflowIT extends BaseIT {
      * Launch remote workflow
      */
     @Test
-    public void cwlVersion11() {
-        final ApiClient userApiClient = CommonTestUtilities.getWebClient(true, USER_2_USERNAME, testingPostgres);
+    void cwlVersion11() {
+        final ApiClient userApiClient = CLICommonTestUtilities.getWebClient(true, USER_2_USERNAME, testingPostgres);
         WorkflowsApi userWorkflowsApi = new WorkflowsApi(userApiClient);
         userWorkflowsApi.manualRegister("github", "dockstore-testing/Workflows-For-CI", "/cwl/v1.1/metadata.cwl", "metadata", "cwl",
             "/cwl/v1.1/cat-job.json");
         final Workflow workflowByPathGithub = userWorkflowsApi
             .getWorkflowByPath("github.com/dockstore-testing/Workflows-For-CI/metadata", WorkflowClient.BIOWORKFLOW, null);
         final Workflow workflow = userWorkflowsApi.refresh(workflowByPathGithub.getId(), true);
-        Assert.assertEquals("Print the contents of a file to stdout using 'cat' running in a docker container.", workflow.getDescription());
-        Assert.assertEquals("Peter Amstutz", workflow.getAuthor());
-        Assert.assertEquals("peter.amstutz@curoverse.com", workflow.getEmail());
-        Assert.assertTrue(workflow.getWorkflowVersions().stream().anyMatch(versions -> "master".equals(versions.getName())));
+        assertEquals("Print the contents of a file to stdout using 'cat' running in a docker container.",
+                workflow.getDescription());
+        assertEquals("Peter Amstutz", workflow.getAuthor());
+        assertEquals("peter.amstutz@curoverse.com", workflow.getEmail());
+        assertTrue(workflow.getWorkflowVersions().stream().anyMatch(versions -> "master".equals(versions.getName())));
         Optional<WorkflowVersion> optionalWorkflowVersion = workflow.getWorkflowVersions().stream()
             .filter(version -> "master".equalsIgnoreCase(version.getName())).findFirst();
         assertTrue(optionalWorkflowVersion.isPresent());
         WorkflowVersion workflowVersion = optionalWorkflowVersion.get();
 
         // verify sourcefiles
-        final io.dockstore.openapi.client.ApiClient userOpenApiClient = CommonTestUtilities.getOpenApiWebClient(true, USER_2_USERNAME, testingPostgres);
+        final io.dockstore.openapi.client.ApiClient userOpenApiClient = CLICommonTestUtilities.getOpenApiWebClient(true, USER_2_USERNAME, testingPostgres);
         io.dockstore.openapi.client.api.WorkflowsApi openApiWorkflowApi = new io.dockstore.openapi.client.api.WorkflowsApi(userOpenApiClient);
         List<io.dockstore.openapi.client.model.SourceFile> sourceFileList = openApiWorkflowApi.getWorkflowVersionsSourcefiles(workflow.getId(), workflowVersion.getId(), null);
 
-        Assert.assertEquals(2, sourceFileList.size());
-        Assert.assertTrue(sourceFileList.stream().anyMatch(sourceFile -> sourceFile.getPath().equals("/cwl/v1.1/cat-job.json")));
-        Assert.assertTrue(sourceFileList.stream().anyMatch(sourceFile -> sourceFile.getPath().equals("/cwl/v1.1/metadata.cwl")));
+        assertEquals(2, sourceFileList.size());
+        assertTrue(sourceFileList.stream().anyMatch(sourceFile -> sourceFile.getPath().equals("/cwl/v1.1/cat-job.json")));
+        assertTrue(sourceFileList.stream().anyMatch(sourceFile -> sourceFile.getPath().equals("/cwl/v1.1/metadata.cwl")));
 
         // Check validation works.  It is invalid because this is a tool and not a workflow.
-        Assert.assertFalse(workflowVersion.isValid());
+        assertFalse(workflowVersion.isValid());
 
         userWorkflowsApi
             .manualRegister("github", "dockstore-testing/Workflows-For-CI", "/cwl/v1.1/count-lines1-wf.cwl", "count-lines1-wf", "cwl",
@@ -373,13 +368,13 @@ public class WorkflowIT extends BaseIT {
         final Workflow workflowByPathGithub2 = userWorkflowsApi
             .getWorkflowByPath("github.com/dockstore-testing/Workflows-For-CI/count-lines1-wf", WorkflowClient.BIOWORKFLOW, null);
         final Workflow workflow2 = userWorkflowsApi.refresh(workflowByPathGithub2.getId(), true);
-        Assert.assertTrue(workflow.getWorkflowVersions().stream().anyMatch(versions -> "master".equals(versions.getName())));
+        assertTrue(workflow.getWorkflowVersions().stream().anyMatch(versions -> "master".equals(versions.getName())));
         Optional<WorkflowVersion> optionalWorkflowVersion2 = workflow2.getWorkflowVersions().stream()
             .filter(version -> "master".equalsIgnoreCase(version.getName())).findFirst();
         assertTrue(optionalWorkflowVersion2.isPresent());
         WorkflowVersion workflowVersion2 = optionalWorkflowVersion2.get();
         // Check validation works.  It should be valid
-        Assert.assertTrue(workflowVersion2.isValid());
+        assertTrue(workflowVersion2.isValid());
         userWorkflowsApi.publish(workflowByPathGithub2.getId(), SwaggerUtility.createPublishRequest(true));
         List<String> args = new ArrayList<>();
         args.add("workflow");
@@ -393,6 +388,6 @@ public class WorkflowIT extends BaseIT {
         args.add("--script");
 
         Client.main(args.toArray(new String[0]));
-        Assert.assertTrue(systemOutRule.getLog().contains("Final process status is success"));
+        assertTrue(systemOutRule.getText().contains("Final process status is success"));
     }
 }
